appId: eu.europa.ec.euidi
name: FCAF precondition - obtain PID mdoc
tags:
  - fcaf
  - precondition
  - pid
  - mdoc
---
- stopApp
- launchApp:
    clearState: false
    permissions:
      camera: allow
      notifications: allow
      all: unset
- openLink:
    link: "${PID_MDOC_DEEPLINK_URL}"
    autoVerify: false
    browser: false
- runFlow:
    file: choose-eudi-wallet.yaml
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Welcome back"
    timeout: 30000
- tapOn:
    point: "11%,40%"
- inputText: "123456"
- assertNotVisible:
    text: "Oups! Something went wrong"
- extendedWaitUntil:
    visible: "Add"
    timeout: 60000
- takeScreenshot: fcaf-pid-mdoc-offer
- tapOn: "Add"
- extendedWaitUntil:
    visible: "Sign in to your account|Non-Trusted Issuer|FormEU|Login|Get credentials|Review & Send|Close|Oups! Something went wrong|KeyError.*"
    timeout: 60000
- runFlow:
    when:
      visible: "Sign in to your account"
    commands:
      - tapOn:
          id: username
      - inputText: "${ISSUER_USERNAME}"
      - tapOn: { point: "50%,10%" }
      - tapOn:
          id: password
      - inputText: "${ISSUER_PASSWORD}"
      - tapOn: { point: "50%,10%" }
      - tapOn: "Sign In"
- extendedWaitUntil:
    visible: "Non-Trusted Issuer|FormEU|Login|Get credentials|Review & Send|Close|Oups! Something went wrong|KeyError.*"
    timeout: 60000
- runFlow:
    when:
      visible:
        text: "Login"
        index: 1
    commands:
      - tapOn:
          text: "Login"
          index: 1
- runFlow:
    when:
      visible: "Get credentials"
    commands:
      - tapOn: "Get credentials"
- extendedWaitUntil:
    visible: "Non-Trusted Issuer|FormEU|Mandatory Information|Review & Send|Close|Oups! Something went wrong|KeyError.*"
    timeout: 60000
- runFlow:
    file: complete-formeu-mandatory.yaml
- assertNotVisible:
    text: "Oups! Something went wrong"
- assertNotVisible:
    text: "KeyError.*"
- extendedWaitUntil:
    visible: "Review & Send|Close|Oups! Something went wrong|KeyError.*"
    timeout: 30000
- assertNotVisible:
    text: "Oups! Something went wrong"
- assertNotVisible:
    text: "KeyError.*"
- runFlow:
    when:
      visible: "Review & Send"
    commands:
      - scrollUntilVisible:
          element: "Authorize"
      - tapOn: "Authorize"
- extendedWaitUntil:
    visible: "Close|Oups! Something went wrong|KeyError.*"
    timeout: 30000
- assertNotVisible:
    text: "Oups! Something went wrong"
- assertNotVisible:
    text: "KeyError.*"
- takeScreenshot: fcaf-pid-mdoc-issued
- tapOn: "Close"
